--- a/index.html
+++ b/index.html
@@ -8,17 +8,31 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
-body{background:#f5f5f5;}
+body{
+  background-size:cover;
+  background-position:center;
+  background-attachment:fixed;
+}
+.overlay{
+  background:rgba(255,255,255,0.82);
+  min-height:100vh;
+}
 .progress-bar{
- color:#fff;font-weight:bold;
- text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
+  color:#fff;
+  font-weight:bold;
+  text-shadow:-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000;
+}
+table th, table td{
+  text-align:center;
 }
 </style>
 </head>
 
 <body>
+<div class="overlay">
 <div class="container py-4">
 
+<!-- PEALKIRI -->
 <div class="card shadow text-center mb-3">
 <div class="card-body">
 <h4>🇪🇪 Oktoobri Kutse → <strong>Päevi reservini</strong></h4>
@@ -26,46 +40,65 @@ body{background:#f5f5f5;}
 </div>
 </div>
 
+<!-- TABID -->
 <ul class="nav nav-tabs mb-3">
-<li class="nav-item"><button class="nav-link active" data-bs-toggle="tab" data-bs-target="#progressTab">📈 Edenemine</button></li>
-<li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#todayTab">🧹 Täna</button></li>
+<li class="nav-item">
+<button class="nav-link active" data-bs-toggle="tab" data-bs-target="#progressTab">📈 Edenemine</button>
+</li>
+<li class="nav-item">
+<button class="nav-link" data-bs-toggle="tab" data-bs-target="#todayTab">🧹 Täna</button>
+</li>
+<li class="nav-item">
+<button class="nav-link" data-bs-toggle="tab" data-bs-target="#listTab">📋 Toa korrapidaja list</button>
+</li>
 </ul>
 
 <div class="tab-content">
 
+<!-- EDENEMINE -->
 <div class="tab-pane fade show active" id="progressTab">
-<div class="card shadow">
+<div class="card shadow mb-4">
 <div class="card-body">
 
+<label>Kogu periood</label>
 <input id="totalDays" class="form-control mb-2" readonly>
+
+<label>Tehtud</label>
 <input id="doneDays" class="form-control mb-2" readonly>
+
+<label>Jäänud</label>
 <input id="leftDays" class="form-control mb-2" readonly>
 
+<label>Progress</label>
 <div class="progress mb-3" style="height:30px">
 <div id="progressBar" class="progress-bar progress-bar-striped progress-bar-animated">0%</div>
 </div>
 
+<label>Järgmine eesmärk</label>
 <input id="goal" class="form-control" readonly>
 
 </div>
 </div>
 </div>
 
+<!-- TÄNA -->
 <div class="tab-pane fade" id="todayTab">
-
-<div class="card shadow text-center mb-3">
+<div class="card shadow text-center">
 <div class="card-body">
 <h5>🧹 Tänased korrapidajad</h5>
 <p id="todayDate" class="fw-bold"></p>
-<p>Parem tuba: <span id="todayRight"></span></p>
-<p>Vasak tuba: <span id="todayLeft"></span></p>
+<p><strong>Parem tuba:</strong> <span id="todayRight"></span></p>
+<p><strong>Vasak tuba:</strong> <span id="todayLeft"></span></p>
+</div>
 </div>
 </div>
 
-<div class="card shadow text-center">
+<!-- LIST -->
+<div class="tab-pane fade" id="listTab">
+<div class="card shadow">
 <div class="card-body">
-<h5>🧽 Ala koristajad täna</h5>
-<p id="areaCleaners" class="fw-bold"></p>
+<div class="accordion" id="roomsAccordion"></div>
+</div>
 </div>
 </div>
 
@@ -76,126 +109,110 @@ body{background:#f5f5f5;}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
-/* ---------- KUUPÄEVAD ---------- */
-const START_DATE=new Date(2025,9,13);
-const END_DATE=new Date(2026,5,12);
-const DUTY_START=new Date(2026,0,6);
+/* ================== KONFIG ================== */
+const START_DATE = new Date(2025,9,13);
+const END_DATE   = new Date(2026,5,12);
 
-/* ---------- NIMED ---------- */
-const RIGHT=["KOSEMAA","KUUSEORG","LUMISTE","MÜÜR","PAASKIVI","PEETRIS","PINT","TAMME","JAKOBSON"];
-const LEFT=["ARU","SUDER","PISNENKO","TAMMUS","KASPAR PLANS","VIISPERT","NURMETALO","KAAREL PLANS","MARK","KRISTI"];
+const DUTY_START = new Date(2026,0,6);
+const DUTY_END   = new Date(2026,5,12);
 
-const ALL=[...RIGHT,...LEFT];
-const PRIORITY=["TAMME","PINT","KOSEMAA","KUUSEORG"];
+const ROOMS = {
+  parem: {
+    label: "Parema toa korrapidaja",
+    names: ["KOSEMAA","KUUSEORG","LUMISTE","MÜÜR","PAASKIVI","PEETRIS","PINT","TAMME","JAKOBSON"]
+  },
+  vasak: {
+    label: "Vasaku toa korrapidaja",
+    names: ["SUDER","PISNENKO","TAMMUS","KASPAR PLANS","VIISPERT","NURMETALO","KAAREL PLANS","MARK","KRISTI"]
+  }
+};
 
-const DAY=86400000;
+/* ================== ABID ================== */
+const DAY_MS = 1000*60*60*24;
 
-/* ---------- TALLINN AEG ---------- */
 function nowTallinn(){
- return new Date(new Date().toLocaleString("en-US",{timeZone:"Europe/Tallinn"}));
+  return new Date(new Date().toLocaleString("en-US",{timeZone:"Europe/Tallinn"}));
 }
-function day(d){return new Date(d.getFullYear(),d.getMonth(),d.getDate());}
-function diff(a,b){return Math.floor((b-a)/DAY);}
-
-/* ---------- PÄEVAD ---------- */
-function calcDays(){
- const today=day(nowTallinn());
- const start=day(START_DATE);
- const end=day(END_DATE);
-
- const total=diff(start,end)+1;
- const done=Math.max(0,diff(start,today));
- const left=Math.max(0,diff(today,end)+1);
-
- return {total,done,left,today};
+function dayOnly(d){
+  return new Date(d.getFullYear(), d.getMonth(), d.getDate());
+}
+function daysBetween(a,b){
+  return Math.floor((b - a) / DAY_MS);
 }
 
-/* ---------- KORRAPIDAJA ---------- */
-function roomDuty(today,list){
- const i=diff(day(DUTY_START),today);
- return list[(i%list.length+list.length)%list.length];
-}
-
-/* ---------- SEED RANDOM ---------- */
-function rand(seed){
- let x=Math.sin(seed)*10000;
- return x-Math.floor(x);
-}
-
-/* ---------- ALA KORISTAJAD ---------- */
-function areaCleanersFor(date){
- const start=day(START_DATE);
- let prev=[];
- let result=[];
-
- for(let d=new Date(start);d<=date;d.setDate(d.getDate()+1)){
-
-  const seed=diff(start,d)+1000;
-  let pool=[];
-
-  ALL.forEach(n=>{
-   let w=1;
-   if(PRIORITY.includes(n)) w=2;
-   if(prev.includes(n)) w=0;
-   for(let i=0;i<w;i++) pool.push(n);
-  });
-
-  if(pool.length<8) pool=[...ALL];
-
-  let set=new Set(); let i=0;
-  while(set.size<8){
-   set.add(pool[Math.floor(rand(seed+i)*pool.length)]);
-   i++;
-  }
-
-  let pr=[...set].filter(n=>PRIORITY.includes(n));
-  if(pr.length>2){
-   set=new Set([...set].filter(n=>!PRIORITY.includes(n)));
-   while(set.size<8){
-    const n=ALL[Math.floor(rand(seed+200+i)*ALL.length)];
-    if(!PRIORITY.includes(n)) set.add(n);
-    i++;
-   }
-  }
-
-  result=[...set];
-  prev=result;
- }
-
- return result;
-}
-
-/* ---------- UPDATE ---------- */
+/* ================== UPDATE ================== */
 function update(){
- const now=nowTallinn();
- clock.innerText=now.toLocaleDateString("et-EE")+" "+now.toLocaleTimeString("et-EE");
+  const now = nowTallinn();
+  clock.innerText = now.toLocaleDateString("et-EE")+" "+now.toLocaleTimeString("et-EE");
 
- const {total,done,left,today}=calcDays();
+  const today = dayOnly(now);
+  const start = dayOnly(START_DATE);
+  const end   = dayOnly(END_DATE);
 
- totalDays.value="Kogu periood: "+total+" päeva";
- doneDays.value="Tehtud: "+done+" päeva";
- leftDays.value="Jäänud: "+left+" päeva";
+  const total = daysBetween(start,end) + 1;
+  const done  = Math.max(0, daysBetween(start,today));
+  const left  = Math.max(0, daysBetween(today,end) + 1);
 
- const pct=Math.min(100,(done/total*100).toFixed(1));
- progressBar.style.width=pct+"%";
- progressBar.innerText=pct+"%";
+  totalDays.value = total+" päeva";
+  doneDays.value  = done+" päeva";
+  leftDays.value  = left+" päeva";
 
- const g50=Math.round(total*0.5);
- const g75=Math.round(total*0.75);
- goal.value=
- done<g50?`50%: ${g50-done} päeva`:
- done<g75?`75%: ${g75-done} päeva`:
- done<total?`100%: ${total-done} päeva`:"VALMIS";
+  const pct = Math.min(100,(done/total*100).toFixed(1));
+  progressBar.style.width = pct+"%";
+  progressBar.innerText = pct+"%";
 
- todayDate.innerText=today.toLocaleDateString("et-EE");
- todayRight.innerText=roomDuty(today,RIGHT);
- todayLeft.innerText=roomDuty(today,LEFT);
+  const g50 = Math.round(total*0.5);
+  const g75 = Math.round(total*0.75);
+  goal.value =
+    done < g50 ? `50%: ${g50-done} päeva` :
+    done < g75 ? `75%: ${g75-done} päeva` :
+    done < total ? `100%: ${total-done} päeva` :
+    "VALMIS";
 
- areaCleaners.innerText=areaCleanersFor(today).join(", ");
+  const dutyIndex = daysBetween(dayOnly(DUTY_START), today);
+  todayDate.innerText = today.toLocaleDateString("et-EE");
+  todayRight.innerText = ROOMS.parem.names[dutyIndex % ROOMS.parem.names.length];
+  todayLeft.innerText  = ROOMS.vasak.names[dutyIndex % ROOMS.vasak.names.length];
 }
 
+/* ================== LISTID ================== */
+function buildLists(){
+  let html="", acc=0;
+
+  for(const key in ROOMS){
+    const room = ROOMS[key];
+    html += `
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button ${acc?"collapsed":""}"
+          data-bs-toggle="collapse" data-bs-target="#room${acc}">
+          ${room.label}
+        </button>
+      </h2>
+      <div id="room${acc}" class="accordion-collapse collapse ${acc?"":"show"}"
+        data-bs-parent="#roomsAccordion">
+        <div class="accordion-body">
+        <table class="table table-bordered table-striped">
+        <thead><tr><th>Kuupäev</th><th>Nimi</th></tr></thead><tbody>`;
+
+    let i=0;
+    for(let d=new Date(DUTY_START); d<=DUTY_END; d.setDate(d.getDate()+1)){
+      html += `<tr><td>${d.toLocaleDateString("et-EE")}</td><td>${room.names[i % room.names.length]}</td></tr>`;
+      i++;
+    }
+
+    html += `</tbody></table></div></div></div>`;
+    acc++;
+  }
+
+  roomsAccordion.innerHTML = html;
+}
+
+/* ================== START ================== */
+buildLists();
 update();
 setInterval(update,1000);
 </script>
+
 </body>
 </html>
