--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ const ROOMS = {
   },
   vasak: {
     label: "Vasaku toa korrapidaja",
-    names: ["SUDER","PISNENKO","TAMMUS","KASPAR PLANS","VIISPERT","NURMETALO","KAAREL PLANS","MARK","KRISTI"]
+    names: ["ARU","SUDER","PISNENKO","TAMMUS","KASPAR PLANS","VIISPERT","NURMETALO","KAAREL PLANS","MARK","KRISTI"]
   }
 };
 
